# otel-api-scraper

./: .conventional-commit-types.md  .pre-commit-config.yaml  .release-please-template.hbs  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  Dockerfile  LOCAL_TESTING.md  README.md  ROADMAP.md  config.yaml  config.yaml.template  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  docs-build.yml  docs-publish.yml  release.yml
CONFIGURATION/: README.md
CONFIGURATION/global/: README.md  minimal-with-self-telemetry.yaml
CONFIGURATION/sources/: README.md
CONFIGURATION/sources/auth/: README.md  azuread-auth.yaml  no-auth.yaml  oauth-static-token.yaml
CONFIGURATION/sources/measurements/: README.md  counters.yaml  gauges.yaml
CONFIGURATION/sources/scrape-types/: README.md  range-type.yaml
LOCAL TESTING/: compose.yaml
LOCAL TESTING/config/: grafana-datasources.yaml
docs/: LOCAL_TESTING.md  TELEMETRY.md  config.yaml  config.yaml.template  index.md  local_install.md
docs/CONFIGURATION/: README.md
docs/CONFIGURATION/global/: README.md  minimal-with-admin-api.yaml  valkey-backend.yaml
docs/CONFIGURATION/sources/: README.md
docs/CONFIGURATION/sources/auth/: README.md  apikey-auth.yaml  basic-auth.yaml  oauth-runtime-token.yaml
docs/CONFIGURATION/sources/measurements/: README.md  counters.yaml  histograms.yaml
docs/CONFIGURATION/sources/scrape-types/: README.md  instant-type.yaml  range-type.yaml
docs/LOCAL TESTING/: compose.yaml
docs/LOCAL_TESTING/: compose.yaml
docs/LOCAL_TESTING/config/: collector.yaml  grafana.ini  prometheus.yml
scripts/: test_with_coverage.py
src/otel_api_scraper/: __init__.py  admin_api.py  config.py  fingerprints.py  http_client.py  pipeline.py  runner.py  scheduler.py  scraper_engine.py  state.py  telemetry.py  utils.py
tests/: test_admin_api.py  test_config.py  test_fingerprints.py  test_http_client.py  test_pipeline.py  test_runner.py  test_scheduler.py  test_scraper_engine.py  test_state.py  test_telemetry.py  test_utils.py
